sfdc-pmt/main/default/objects/PMT_Project__c/fields/Previous_Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Previous_Project_Health__c</fullName>
    <description>Created to restore the value of the Project Health when a Task moves out of Pended. Used in the PMT Task Status Sync flow. (AB#66642)</description>
    <label>Previous Project Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMT_Status</valueSetName>
    </valueSet>
</CustomField>