sfdc-pmt/main/default/objects/PMT_Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <formula>IF(  BEGINS(OwnerId, &apos;00G&apos;) ,  Owner:Queue.QueueName , Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>