sfdc-pmt/main/default/objects/PMT_Project__c/fields/Project_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_s_Manager__c</fullName>
    <description>PMT Project&apos;s owner&apos;s manager.</description>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>