sfdc-pmt/main/default/objects/PMT_Project__c/recordTypes/Cayan.recordType-meta.xml
<RecordType>
    <fullName>Cayan</fullName>
    <active>true</active>
    <label>Cayan</label>
</RecordType>