sfdc-pmt/main/default/objects/PMT_Project__c/validationRules/Protect_Templates_behind_Permissions.validationRule-meta.xml
<ValidationRule>
    <fullName>Protect_Templates_behind_Permissions</fullName>
    <active>true</active>
    <description>PMT Projects marked as templates should only be editable if a User has the PMT Template Author permissions. Currently only enforced on CAYAN specific templates.</description>
    <errorConditionFormula>AND(IsTemplate__c,  RecordType.DeveloperName == &apos;Cayan&apos;,  NOT($Permission.PMT_Template_Author))</errorConditionFormula>
    <errorMessage>Only Template Authors can Create/Modify a Project Template.</errorMessage>
</ValidationRule>