sfdc-pmt/main/default/objects/PMT_Project__c/listViews/All_Open_Implementation_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_Implementation_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PMT_Project__c.Implementation</value>
    </filters>
    <filters>
        <field>Project_Health__c</field>
        <operation>equals</operation>
        <value>Not Started,On Track,At Risk,Late,Pended,On Hold</value>
    </filters>
    <label>All Open Implementation Projects</label>
</ListView>