sfdc-pmt/main/default/objects/PMT_Project__c/listViews/All_Open_Onboarding_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_Onboarding_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Owner__c</columns>
    <columns>Percentage_Completion__c</columns>
    <columns>Health_Icon__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Deadline_formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PMT_Project__c.Onboarding</value>
    </filters>
    <filters>
        <field>Project_Health__c</field>
        <operation>equals</operation>
        <value>Not Started,On Track,At Risk,Late,Pended,On Hold</value>
    </filters>
    <label>Open Onboarding Projects</label>
</ListView>