sfdc-pmt/main/default/objects/PMT_Project__c/listViews/Cayan_Templates.listView-meta.xml
<ListView>
    <fullName>Cayan_Templates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PMT_Project__c.Cayan</value>
    </filters>
    <label>Cayan Templates</label>
</ListView>